Link JavaScript and CSS files

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Lucas Randria - Mon CV</title>
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+        <script type="text/javascript" src="script.js"></script>
+                
 	</head>
 
 	<body>
