--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
         <link href="css/style.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-        <script type="text/javascript" src="script.js"></script>
-                
+        <script type="text/javascript" src="script.js"></script>                
 	</head>
 
 	<body>
+		<div class="row bg-color">
+        	<div class="row bg-pattern">
+            	<div class="col-md-12" style="height: 2500px;">
+                </div>
+            </div>
+        </div>
 	</body>
+    
 </html>
