--- a/index.html
+++ b/index.html
@@ -2,43 +2,56 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<title>Lucas Randria - Mon CV</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
+        <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet" >
         <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Just+Me+Again+Down+Here" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Kavivanar" rel="stylesheet">
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
         <script type="text/javascript" src="script.js"></script>                
 	</head>
 
 	<body>
+        <!-- ADD <div class="container-fluid"> -->
 		<div class="row bg-color">
         	<div class="row bg-pattern">
-                
-                    <!-- Page présentation -->          
+                <!-- ADD <div class="container"> -->
+                <!-- Page présentation -->
                     <div class="row main">
-                    	<p><!--
-                        <div class="col-md-4 main-col-left main-txt">
-                        	<p>Lucas Randria</p>
-                        </div>-->
-                        <div class="col-md-8 col-md-offset-2 main-col">
-                            <div class="row">
-                                <p><img src="img/PI_hexa_2.png" alt="" class="PI_hexa"></p>
+                        <div class="col-lg-8 col-md-offset-2 main-col">
+                            <div class="row PI_hexa">
+                                <img src="img/PI_hexa_2.png" alt="ID Picture">
                             </div> 
-                            <div class="row main-txt">
-                                <p>Lucas Randria</p>
-                                <p>WEBDESIGNER & FRONT END DEVELOPER</p>
-                            </div>                             
-                            <div class="row">
-                                <p><h6 class="main-link">Cliquez sur la photo pour accéder au CV</h6><p>
+                            <div class="row name">
+                                <p>Lucas &nbspRandria</p>
+                            </div>
+                            <div class="row job">
+                                <p>WEBDESIGNER&nbsp X &nbspFRONT END DEVELOPER</p>
+                            </div>
+                            <div class="row main-social-icon">
+                                <a href="https://github.com/lr152594/CV_Website"><i class="fa fa-linkedin fa-2x"></i></a>
+                                <a href="https://github.com/lr152594/CV_Website"><i class="fa fa-viadeo fa-2x"></i></a>
+                                <a href="https://github.com/lr152594/CV_Website"><i class="fa fa-github fa-2x"></i></a>
+                                <a href="https://github.com/lr152594/CV_Website"><i class="fa fa-envelope-o fa-2x"></i></a>
+                            </div>
+                            <div class="row main-message">
+                                <h6>Cliquez sur la photo pour accéder au CV</h6>
                             </div>
                         </div> <!--
-                        <div class="col-md-4 main-col-right main-txt">
-                        	<p>WEBDESIGNER </p>
-                            <p>FRONT END DEVELOPER</p>	
+                    </div><!--
+                    <div class="row">
+                        <div class="col-lg-12" style="margin-bottom: 200px;">
+                            <p>A</p>
+                            <p>A</p>
+                            <p>A</p>
+                            <p>A</p>
+                            <p>A</p>
                         </div>-->
-                        </p>
                     </div>
-                    
             </div>
         </div>        
 	</body>
