Add .container class et adjust correspondant parameters

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
+        <!--<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">-->
 		<title>Lucas Randria - Mon CV</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
@@ -12,20 +12,20 @@
         <link href="https://fonts.googleapis.com/css?family=Just+Me+Again+Down+Here" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Kavivanar" rel="stylesheet">
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-        <script type="text/javascript" src="script.js"></script>                
+        <script type="text/javascript" src="js/script.js"></script>
 	</head>
 
 	<body>
-        <!-- ADD <div class="container-fluid"> -->
-		<div class="row bg-color">
-        	<div class="row bg-pattern">
-                <!-- ADD <div class="container"> -->
-                <!-- Page présentation -->
+        <div class="container">
+            <div class="row bg-color">
+                <div class="row bg-pattern">
+
+                    <!-- Page présentation -->
                     <div class="row main">
-                        <div class="col-lg-8 col-md-offset-2 main-col">
+                        <div class="col-lg-8 col-xs-12 col-sm-12 col-lg-offset-2 main-col">
                             <div class="row PI_hexa">
-                                <img src="img/PI_hexa_2.png" alt="ID Picture">
-                            </div> 
+                                <img src="img/PI_hexa_3.png" alt="ID Picture" class="PI_hexa_click">
+                            </div>
                             <div class="row name">
                                 <p>Lucas &nbspRandria</p>
                             </div>
@@ -41,19 +41,14 @@
                             <div class="row main-message">
                                 <h6>Cliquez sur la photo pour accéder au CV</h6>
                             </div>
-                        </div> <!--
-                    </div><!--
-                    <div class="row">
-                        <div class="col-lg-12" style="margin-bottom: 200px;">
-                            <p>A</p>
-                            <p>A</p>
-                            <p>A</p>
-                            <p>A</p>
-                            <p>A</p>
-                        </div>-->
+
+
+                        </div>
                     </div>
+
+                </div>
             </div>
-        </div>        
+        </div>
 	</body>
     
 </html>
