Add all section title and About me and Formation content

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Just+Me+Again+Down+Here" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Kavivanar" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
         <script type="text/javascript" src="js/script.js"></script>
 	</head>
@@ -42,9 +44,125 @@
                                 <h6>Cliquez sur la photo pour accéder au CV</h6>
                             </div>
 
-
                         </div>
                     </div>
+
+                    <!-- Contenu -->
+                    <div class="row content">
+                        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-2">
+
+                            <!-- A PROPOS -->
+                            <div class="row framework">
+                                <p class="title"> Qui suis-je ? </p>
+                                <div class="col-lg-2">
+                                    <p> <strong>Nom:</strong> </br>Lucas Randria</p>
+                                    <p> <strong>Age:</strong> </br>21 ans</p>
+                                    <p> <strong>Localisation:</strong> </br>Paris, France</p>
+                                </div>
+                                <div class="col-lg-10 about-me-txt">
+                                    <p>En tant que jeune développeur passionné par le Front End, mais ayant aussi un attrait indéniable pour ce qui touche au Back End et plus généralement à l'informatique, je me dévoue totalement dans les projets dans lesquels je m'engage. </p>
+                                    <p>La rigueur étant le maître mot de mon caractère, j'aime pouvoir faire preuve de créativité et travailler en équipe.</p>
+                                    <p>À mes heures perdues, je suis également un musicien qui se représente dans divers bars et restaurants.</p>
+                                </div>
+                            </div>
+
+                            <!-- FORMATION -->
+                            <div class="row framework">
+                                <p class="title"> Formation </p>
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3">
+                                    <div class="row formation">
+                                        <div class="row formation-name">
+                                            <p>Bachelor Développeur en Génie Logiciel Web & Mobilité</p>
+                                        </div>
+                                        <div class="row formation-school">
+                                            <p>ECE TECH - Paris</p>
+                                        </div>
+                                        <div class="row formation-date">
+                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbspSeptembre 2016 - (Prévu pour) Juin 2017</p>
+                                        </div>
+                                        <div class="row formation-subject">
+                                            <p></p>
+                                        </div>
+                                    </div>
+                                    <div class="row formation">
+                                        <div class="row formation-name">
+                                            <p>Diplôme d'Ingénieur Généraliste</p>
+                                        </div>
+                                        <div class="row formation-school">
+                                            <p>ECE - Paris</p>
+                                        </div>
+                                        <div class="row formation-date">
+                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbspSeptembre 2015 - Juin 2016 (réorientation)</p>
+                                        </div>
+                                        <div class="row formation-subject">
+                                            <p></p>
+                                        </div>
+                                    </div>
+                                    <div class="row formation">
+                                        <div class="row formation-name">
+                                            <p>DUT Génie Électrique et Informatique Industrielle</p>
+                                        </div>
+                                        <div class="row formation-school">
+                                            <p>IUT d'Aix-Marseille Université</p>
+                                        </div>
+                                        <div class="row formation-date">
+                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbspSeptembre 2013 - Juin 2015</p>
+                                        </div>
+                                        <div class="row formation-spec">
+                                            <p>Spécialité: Électronique pour les Télécommunications</p>
+                                        </div>
+                                        <div class="row formation-subject">
+                                            <p></p>
+                                        </div>
+                                    </div>
+                                    <div class="row formation">
+                                        <div class="row formation-name">
+                                            <p>Baccalauréat Scientique</p>
+                                        </div>
+                                        <div class="row formation-school">
+                                            <p>Lycée Général et Technologique Jules Ferry Cannes</p>
+                                        </div>
+                                        <div class="row formation-date">
+                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbspSeptembre 2010 - Juin 2013</p>
+                                        </div>
+                                        <div class="row formation-spec">
+                                            <p>Option: Sciences de l'Ingénieur</p>
+                                            <p>Spécialité: Électronique pour les Télécommunications</p>
+                                        </div>
+                                        <div class="row formation-subject">
+                                            <p></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- EXPÉRIENCES PROFESSIONNELLES -->
+                            <div class="row framework">
+                                <p class="title"> Expériences Professionnelles </p>
+                                <p> Actuellement étudiant en dernière année de Bachelor, je suis Développeur Front End. </p>
+                            </div>
+
+                            <!-- COMPÉTENCES -->
+                            <div class="row framework">
+                                <p class="title"> Compétences </p>
+                                <p> Actuellement étudiant en dernière année de Bachelor, je suis Développeur Front End. </p>
+                            </div>
+
+                            <!-- HOBBIES -->
+                            <div class="row framework">
+                                <p class="title"> Hobbies </p>
+                                <p> Actuellement étudiant en dernière année de Bachelor, je suis Développeur Front End. </p>
+                            </div>
+
+                            <!-- CONTACT -->
+                            <div class="row framework">
+                                <p class="title"> Contact </p>
+                                <p> Actuellement étudiant en dernière année de Bachelor, je suis Développeur Front End. </p>
+                            </div>
+
+                         </div>
+                    </div>
+
 
                 </div>
             </div>
