Add Professional Experiences content

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3">
                                     <div class="row formation">
                                         <div class="row formation-name">
-                                            <p>Bachelor Développeur en Génie Logiciel Web & Mobilité</p>
+                                            <p>Bachelor Développeur en Génie Logiciel Web & Mobilité (par alternance)</p>
                                         </div>
                                         <div class="row formation-school">
                                             <p>ECE TECH - Paris</p>
@@ -117,7 +117,7 @@
                                     </div>
                                     <div class="row formation">
                                         <div class="row formation-name">
-                                            <p>Baccalauréat Scientique</p>
+                                            <p>Baccalauréat Scientifique</p>
                                         </div>
                                         <div class="row formation-school">
                                             <p>Lycée Général et Technologique Jules Ferry Cannes</p>
@@ -127,7 +127,7 @@
                                         </div>
                                         <div class="row formation-spec">
                                             <p>Option: Sciences de l'Ingénieur</p>
-                                            <p>Spécialité: Électronique pour les Télécommunications</p>
+                                            <p>Spécialité: Informatique et Sciences du Numérique</p>
                                         </div>
                                         <div class="row formation-subject">
                                             <p></p>
@@ -139,7 +139,80 @@
                             <!-- EXPÉRIENCES PROFESSIONNELLES -->
                             <div class="row framework">
                                 <p class="title"> Expériences Professionnelles </p>
-                                <p> Actuellement étudiant en dernière année de Bachelor, je suis Développeur Front End. </p>
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3">
+                                    <div class="row XP">
+                                        <div class="row XP-job">
+                                            <p>Développeur Front End Junior (alternance)</p>
+                                        </div>
+                                        <div class="row XP-firm">
+                                            <p>Avanquest</p>
+                                        </div>
+                                        <div class="row XP-date">
+                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbspSeptembre 2016 - Septembre 2017</p>
+                                        </div>
+                                        <div class="row XP-mission">
+                                            <p></p>
+                                        </div>
+                                    </div>
+                                    <div class="row XP">
+                                        <div class="row XP-job">
+                                            <p>Développeur (stage)</p>
+                                        </div>
+                                        <div class="row XP-firm">
+                                            <p>Visteon Software Technologies</p>
+                                        </div>
+                                        <div class="row XP-date">
+                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbspAvril 2015 - Juin 2015</p>
+                                        </div>
+                                        <div class="row XP-mission">
+                                            <p></p>
+                                        </div>
+                                    </div>
+                                    <p class="subtitle"> Autres Expériences </p>
+                                    <div class="row XP">
+                                        <div class="row XP-job">
+                                            <p>Commis de salle</p>
+                                        </div>
+                                        <div class="row XP-firm">
+                                            <p>Hotel Belles Rives *****</p>
+                                        </div>
+                                        <div class="row XP-date">
+                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbspJuillet 2016 - Août 2016</p>
+                                        </div>
+                                        <div class="row XP-mission">
+                                            <p></p>
+                                        </div>
+                                    </div>
+                                    <div class="row XP">
+                                        <div class="row XP-job">
+                                            <p>Commis de bar</p>
+                                        </div>
+                                        <div class="row XP-firm">
+                                            <p>Grand Hyatt Hôtel Martinez*****</p>
+                                        </div>
+                                        <div class="row XP-date">
+                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbspJuillet 2014 - Août 2014 &nbsp&nbsp & &nbsp&nbsp Juillet 2015 - Août 2015</p>
+                                        </div>
+                                        <div class="row XP-mission">
+                                            <p></p>
+                                        </div>
+                                    </div>
+                                    <div class="row XP">
+                                        <div class="row XP-job">
+                                            <p>Équipier Polyvalent</p>
+                                        </div>
+                                        <div class="row XP-firm">
+                                            <p>McDonald's - Cannes La Bocca</p>
+                                        </div>
+                                        <div class="row XP-date">
+                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbspJuillet 2013 - Août 2013</p>
+                                        </div>
+                                        <div class="row XP-mission">
+                                            <p></p>
+                                        </div>
+                                    </div>
+                                </div>
+
                             </div>
 
                             <!-- COMPÉTENCES -->
@@ -168,5 +241,5 @@
             </div>
         </div>
 	</body>
-    
+
 </html>
