Correct JS link protocol (http to https)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link href="https://fonts.googleapis.com/css?family=Kavivanar" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-        <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
         <script type="text/javascript" src="js/script.js"></script>
 	</head>
 
