UPDATE About Me section responsive design

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-2">
 
                             <!-- A PROPOS -->
-                            <div class="row framework">
+                            <div class="row framework about-me-large">
                                 <p class="title"> Qui suis-je ? </p>
                                 <div class="col-lg-2">
                                     <p> <strong>Nom:</strong> </br>Lucas Randria</p>
@@ -65,11 +65,32 @@
                                     <p>À mes heures perdues, je suis également un musicien qui se représente dans divers bars et restaurants.</p>
                                 </div>
                             </div>
+                            <div class="row framework about-me-small">
+                                <p class="title"> Qui suis-je ? </p>
+                                <div class="row">
+                                    <div class="col-md-4 col-sm-4 col-xs-4">
+                                        <p> <strong>Nom:</strong> </br>Lucas Randria</p>
+                                    </div>
+                                    <div class="col-md-4 col-sm-4 col-xs-4">
+                                        <p> <strong>Age:</strong> </br>21 ans</p>
+                                    </div>
+                                    <div class="col-md-4 col-sm-4 col-xs-4">
+                                        <p> <strong>Localisation:</strong> </br>Paris, France</p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12 col-sm-12 col-xs-12 about-me-txt">
+                                        <p>En tant que jeune développeur passionné par le Front End, mais ayant aussi un attrait indéniable pour ce qui touche au Back End et plus généralement à l'informatique, je me dévoue totalement dans les projets dans lesquels je m'engage. </p>
+                                        <p>La rigueur étant le maître mot de mon caractère, j'aime pouvoir faire preuve de créativité et travailler en équipe.</p>
+                                        <p>À mes heures perdues, je suis également un musicien qui se représente dans divers bars et restaurants.</p>
+                                    </div>
+                                </div>
+                            </div>
 
                             <!-- FORMATION -->
                             <div class="row framework">
                                 <p class="title"> Formation </p>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3">
+                                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 col-lg-offset-3">
                                     <div class="row formation">
                                         <div class="row formation-name">
                                             <p>Bachelor Développeur en Génie Logiciel Web & Mobilité (par alternance)</p>
@@ -78,7 +99,7 @@
                                             <p>ECE TECH - Paris</p>
                                         </div>
                                         <div class="row formation-date">
-                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbspSeptembre 2016 - (Prévu pour) Juin 2017</p>
+                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbsp&nbsp&nbsp&nbspSeptembre 2016 - (Prévu pour) Juin 2017</p>
                                         </div>
                                         <div class="row formation-subject">
                                             <p></p>
@@ -92,7 +113,7 @@
                                             <p>ECE - Paris</p>
                                         </div>
                                         <div class="row formation-date">
-                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbspSeptembre 2015 - Juin 2016 (réorientation)</p>
+                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbsp&nbsp&nbsp&nbspSeptembre 2015 - Juin 2016 (réorientation)</p>
                                         </div>
                                         <div class="row formation-subject">
                                             <p></p>
@@ -106,7 +127,7 @@
                                             <p>IUT d'Aix-Marseille Université</p>
                                         </div>
                                         <div class="row formation-date">
-                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbspSeptembre 2013 - Juin 2015</p>
+                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbsp&nbsp&nbsp&nbspSeptembre 2013 - Juin 2015</p>
                                         </div>
                                         <div class="row formation-spec">
                                             <p>Spécialité: Électronique pour les Télécommunications</p>
@@ -123,7 +144,7 @@
                                             <p>Lycée Général et Technologique Jules Ferry Cannes</p>
                                         </div>
                                         <div class="row formation-date">
-                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbspSeptembre 2010 - Juin 2013</p>
+                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbsp&nbsp&nbsp&nbspSeptembre 2010 - Juin 2013</p>
                                         </div>
                                         <div class="row formation-spec">
                                             <p>Option: Sciences de l'Ingénieur</p>
@@ -139,7 +160,7 @@
                             <!-- EXPÉRIENCES PROFESSIONNELLES -->
                             <div class="row framework">
                                 <p class="title"> Expériences Professionnelles </p>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 col-lg-offset-3 col-md-offset-3 col-sm-offset-3 col-xs-offset-3">
+                                <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 col-lg-offset-3">
                                     <div class="row XP">
                                         <div class="row XP-job">
                                             <p>Développeur Front End Junior (alternance)</p>
@@ -148,7 +169,7 @@
                                             <p>Avanquest</p>
                                         </div>
                                         <div class="row XP-date">
-                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbspSeptembre 2016 - Septembre 2017</p>
+                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbsp&nbsp&nbsp&nbspSeptembre 2016 - Septembre 2017</p>
                                         </div>
                                         <div class="row XP-mission">
                                             <p></p>
@@ -162,7 +183,7 @@
                                             <p>Visteon Software Technologies</p>
                                         </div>
                                         <div class="row XP-date">
-                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbspAvril 2015 - Juin 2015</p>
+                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbsp&nbsp&nbsp&nbspAvril 2015 - Juin 2015</p>
                                         </div>
                                         <div class="row XP-mission">
                                             <p></p>
@@ -177,7 +198,7 @@
                                             <p>Hotel Belles Rives *****</p>
                                         </div>
                                         <div class="row XP-date">
-                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbspJuillet 2016 - Août 2016</p>
+                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbsp&nbsp&nbsp&nbspJuillet 2016 - Août 2016</p>
                                         </div>
                                         <div class="row XP-mission">
                                             <p></p>
@@ -191,7 +212,7 @@
                                             <p>Grand Hyatt Hôtel Martinez*****</p>
                                         </div>
                                         <div class="row XP-date">
-                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbspJuillet 2014 - Août 2014 &nbsp&nbsp & &nbsp&nbsp Juillet 2015 - Août 2015</p>
+                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbsp&nbsp&nbsp&nbspJuillet 2014 - Août 2014 &nbsp&nbsp & &nbsp&nbsp Juillet 2015 - Août 2015</p>
                                         </div>
                                         <div class="row XP-mission">
                                             <p></p>
@@ -205,7 +226,7 @@
                                             <p>McDonald's - Cannes La Bocca</p>
                                         </div>
                                         <div class="row XP-date">
-                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbspJuillet 2013 - Août 2013</p>
+                                            <p><i class="fa fa-calendar-o fa-lg" aria-hidden="true"></i> &nbsp&nbsp&nbsp&nbspJuillet 2013 - Août 2013</p>
                                         </div>
                                         <div class="row XP-mission">
                                             <p></p>
